[gd_scene load_steps=6 format=3 uid="uid://sv2hctgcy3li"]

[ext_resource type="Texture2D" uid="uid://buut3gtyqb7oc" path="res://asset/ui/wood/UI_Wood_Flat.png" id="1_1rwln"]
[ext_resource type="Script" path="res://elements/launcher/launcher.gd" id="1_72agk"]
[ext_resource type="PackedScene" uid="uid://fwvt5ili38r3" path="res://elements/launcher/game_save_button.tscn" id="2_vepi3"]
[ext_resource type="PackedScene" uid="uid://c1einsb6nyd1r" path="res://elements/launcher/login_register/login_register.tscn" id="4_j8w3q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nr1t5"]
atlas = ExtResource("1_1rwln")
region = Rect2(0, 224, 160, 160)

[node name="Launcher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_72agk")
game_save_scene = ExtResource("2_vepi3")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_nr1t5")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="LoginRegister" parent="." instance=ExtResource("4_j8w3q")]
unique_name_in_owner = true
layout_mode = 1

[node name="GameSavesCenterContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GameSavesCenterContainer"]
layout_mode = 2

[node name="CreateNewGameButton" type="Button" parent="GameSavesCenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
text = "New Game"

[node name="GameSavesScrollContainer" type="ScrollContainer" parent="GameSavesCenterContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GameSavesVBoxContainer" type="VBoxContainer" parent="GameSavesCenterContainer/HBoxContainer/GameSavesScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="GameSavesCenterContainer/HBoxContainer/CreateNewGameButton" to="." method="_on_create_new_game_button_pressed"]
